test/cfg/resolution_error.yl
// RUN: compiler %s -cfg-dump 2>&1 | filecheck %s
// CHECK: [[# @LINE + 1 ]]:1: error: 'main' function is expected to return 'void'
fn main(): number {}

// CHECK-NOT: {{.*error.*}}
